logs/helmholtz.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Helmholtz-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/helmholtz'...
Listing './lib/python3.5/site-packages/helmholtz/access_control'...
Listing './lib/python3.5/site-packages/helmholtz/access_control/templatetags'...
Listing './lib/python3.5/site-packages/helmholtz/access_request'...
Listing './lib/python3.5/site-packages/helmholtz/access_request/templatetags'...
Listing './lib/python3.5/site-packages/helmholtz/analysis'...
Listing './lib/python3.5/site-packages/helmholtz/analysis/models'...
Listing './lib/python3.5/site-packages/helmholtz/analysis/templatetags'...
Compiling './lib/python3.5/site-packages/helmholtz/analysis/templatetags/operations.py'...
***   File "./lib/python3.5/site-packages/helmholtz/analysis/templatetags/operations.py", line 24
    raise template.TemplateSyntaxError, "%r tag requires min and max arguments" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/helmholtz/analysis/tools'...
Listing './lib/python3.5/site-packages/helmholtz/analysis/tools/core'...
Compiling './lib/python3.5/site-packages/helmholtz/analysis/tools/core/components.py'...
***   File "./lib/python3.5/site-packages/helmholtz/analysis/tools/core/components.py", line 426
    print "\nComponent of type : %s\n" % self.type
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/helmholtz/analysis/tools/factories'...
Listing './lib/python3.5/site-packages/helmholtz/analysis/tools/factories/django'...
Listing './lib/python3.5/site-packages/helmholtz/analysis/tools/library'...
Listing './lib/python3.5/site-packages/helmholtz/analysis/tools/library/base_components'...
Listing './lib/python3.5/site-packages/helmholtz/analysis/tools/library/complex_components'...
Compiling './lib/python3.5/site-packages/helmholtz/analysis/tools/library/complex_components/complex_component.py'...
***   File "./lib/python3.5/site-packages/helmholtz/analysis/tools/library/complex_components/complex_component.py", line 16
    print "Warning: could not import scipy. Certain statistical tests will not be available."
                                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/helmholtz/analysis/tools/managers'...
Listing './lib/python3.5/site-packages/helmholtz/annotation'...
Listing './lib/python3.5/site-packages/helmholtz/bin'...
Listing './lib/python3.5/site-packages/helmholtz/cells'...
Listing './lib/python3.5/site-packages/helmholtz/chemistry'...
Listing './lib/python3.5/site-packages/helmholtz/core'...
Compiling './lib/python3.5/site-packages/helmholtz/core/decorators.py'...
***   File "./lib/python3.5/site-packages/helmholtz/core/decorators.py", line 17
    print func.func_name, request
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/helmholtz/core/management'...
Listing './lib/python3.5/site-packages/helmholtz/core/management/commands'...
Compiling './lib/python3.5/site-packages/helmholtz/core/management/commands/startproject.py'...
***   File "./lib/python3.5/site-packages/helmholtz/core/management/commands/startproject.py", line 44
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/helmholtz/core/modules.py'...
***   File "./lib/python3.5/site-packages/helmholtz/core/modules.py", line 266
    print cls
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/helmholtz/core/populate.py'...
***   File "./lib/python3.5/site-packages/helmholtz/core/populate.py", line 375
    except Exception, e :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/helmholtz/drug_applications'...
Listing './lib/python3.5/site-packages/helmholtz/editor'...
Listing './lib/python3.5/site-packages/helmholtz/editor/forms'...
Listing './lib/python3.5/site-packages/helmholtz/editor/management'...
Listing './lib/python3.5/site-packages/helmholtz/editor/management/commands'...
Listing './lib/python3.5/site-packages/helmholtz/editor/templatetags'...
Listing './lib/python3.5/site-packages/helmholtz/editor/views'...
Listing './lib/python3.5/site-packages/helmholtz/electricalstimulation'...
Listing './lib/python3.5/site-packages/helmholtz/electrophysiology'...
Listing './lib/python3.5/site-packages/helmholtz/equipment'...
Listing './lib/python3.5/site-packages/helmholtz/experiment'...
Listing './lib/python3.5/site-packages/helmholtz/experiment/templatetags'...
Listing './lib/python3.5/site-packages/helmholtz/fields'...
Listing './lib/python3.5/site-packages/helmholtz/histochemistry'...
Listing './lib/python3.5/site-packages/helmholtz/location'...
Listing './lib/python3.5/site-packages/helmholtz/measurements'...
Listing './lib/python3.5/site-packages/helmholtz/neuralstructures'...
Listing './lib/python3.5/site-packages/helmholtz/neuralstructures/management'...
Listing './lib/python3.5/site-packages/helmholtz/neuralstructures/management/commands'...
Listing './lib/python3.5/site-packages/helmholtz/optical_imaging'...
Listing './lib/python3.5/site-packages/helmholtz/people'...
Listing './lib/python3.5/site-packages/helmholtz/people/management'...
Listing './lib/python3.5/site-packages/helmholtz/people/management/commands'...
Listing './lib/python3.5/site-packages/helmholtz/people/templatetags'...
Listing './lib/python3.5/site-packages/helmholtz/preparations'...
Listing './lib/python3.5/site-packages/helmholtz/preparations/templatetags'...
Listing './lib/python3.5/site-packages/helmholtz/reconstruction'...
Listing './lib/python3.5/site-packages/helmholtz/recording'...
Listing './lib/python3.5/site-packages/helmholtz/recording/templatetags'...
Compiling './lib/python3.5/site-packages/helmholtz/recording/templatetags/tags.py'...
***   File "./lib/python3.5/site-packages/helmholtz/recording/templatetags/tags.py", line 23
    raise template.TemplateSyntaxError, "%r tag requires min and max arguments" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/helmholtz/recording/tools'...
Listing './lib/python3.5/site-packages/helmholtz/signals'...
Listing './lib/python3.5/site-packages/helmholtz/species'...
Listing './lib/python3.5/site-packages/helmholtz/species/management'...
Listing './lib/python3.5/site-packages/helmholtz/species/management/commands'...
Listing './lib/python3.5/site-packages/helmholtz/stimulation'...
Listing './lib/python3.5/site-packages/helmholtz/storage'...
Listing './lib/python3.5/site-packages/helmholtz/storage/management'...
Listing './lib/python3.5/site-packages/helmholtz/storage/management/commands'...
Listing './lib/python3.5/site-packages/helmholtz/trackers'...
Listing './lib/python3.5/site-packages/helmholtz/units'...
Listing './lib/python3.5/site-packages/helmholtz/units/management'...
Listing './lib/python3.5/site-packages/helmholtz/units/management/commands'...
Listing './lib/python3.5/site-packages/helmholtz/vision'...
Listing './lib/python3.5/site-packages/helmholtz/visualstimulation'...
Listing './lib/python3.5/site-packages/helmholtz/waveforms'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
